--- a/base/html/cw/map_cw_view2.html
+++ b/base/html/cw/map_cw_view2.html
@@ -107,30 +107,30 @@
           <!-- 영상 분할 화면 -->
           <section class="split-screen-container">
             <div class="split-screen">
-              <!-- <span class="split-screen-info">
+              <span class="split-screen-info">
                 <i>채널1</i>
                 <em>천안동남카메라1</em>
-              </span> -->
+              </span>
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <!-- <span class="split-screen-info">
+              <span class="split-screen-info">
                 <i>채널2</i>
                 <em>천안동남카메라2</em>
-              </span> -->
+              </span>
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
             </div>
             <!-- //split-screen -->
             <div class="split-screen">
-              <!-- <span class="split-screen-info">
+              <span class="split-screen-info">
                 <i>채널3</i>
                 <em>천안동남카메라3</em>
-              </span> -->
+              </span>
               <video autoplay loop muted width="100%" height="100%" poster="/base/images/cannot_connection.png" class="split-video">
                 <source src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4" type="video/mp4" />
               </video>
