--- a/base/html/dashboard_cr_b.html
+++ b/base/html/dashboard_cr_b.html
@@ -210,16 +210,17 @@
                             <td class="fluctuate"><i class="num">40</i>%</td>
                             <td class="fluctuate">▲</td>
                           </tr>
-                          <tr class="increase">
+                          <!-- 231211 stationarily 클래스 추가 -->
+                          <tr class="stationarily">
                             <td>
                               <i>3</i>
                             </td>
                             <td>
                               <span class="txt">태릉입구역</span>
                             </td>
-                            <td class="fluctuate"><i class="num">9,300</i>대 증가</td>
-                            <td class="fluctuate"><i class="num">40</i>%</td>
-                            <td class="fluctuate">▲</td>
+                            <td class="fluctuate">변화 없음</td>
+                            <td class="fluctuate"><i class="num">0</i>%</td>
+                            <td class="fluctuate"></td>
                           </tr>
                           <tr class="increase">
                             <td>
