fix: 수정PPT(231130_34) 작업 - 5~9페이지 작업

--- a/base/html/dashboard_cr_a.html
+++ b/base/html/dashboard_cr_a.html
@@ -229,13 +229,14 @@
                   <!-- //dashboard-reform-tit-wrap -->
                   <div class="gap-tbl">
                     <table>
+                      <!-- 231212 col 너비 수정 -->
                       <colgroup>
-                        <col style="width: 4rem" />
-                        <col style="width: 2rem" />
-                        <col style="width: 2.1rem" />
-                        <col style="width: 2.1rem" />
-                        <col style="width: 7.6rem" />
-                        <col style="width: 7.6rem" />
+                        <col style="width: 40px" />
+                        <col style="width: 140px" />
+                        <col style="width: 150px" />
+                        <col style="width: 150px" />
+                        <col style="width: 70px" />
+                        <col style="width: 70px" />
                         <col />
                       </colgroup>
                       <thead>
