--- a/base/html/is/crossroads_roi_set_tab.html
+++ b/base/html/is/crossroads_roi_set_tab.html
@@ -193,7 +193,8 @@
             <!-- <button type="button" class="roi-set-one-btn" disabled>Gradient</button> -->
 
             <div class="perceive-body">
-              <table>
+              <!-- 231212 삭제 -->
+              <!-- <table>
                 <colgroup>
                   <col style="width: 3.8rem;" />
                   <col />
@@ -224,7 +225,7 @@
                     </td>
                   </tr>
                 </tbody>
-              </table>
+              </table> -->
 
               <table>
                 <colgroup>
@@ -289,16 +290,14 @@
             <!-- //roi-set-list-header -->
 
             <!-- 230822 xs 클래스 추가 -->
+            <!-- 231212 테이블 수정 -->
             <div class="data-tbl-gray xs">
               <table>
                 <thead>
                   <tr>
                     <th>Type</th>
-                    <th>Pitch</th>
-                    <th>Yaw</th>
-                    <th>거리<br />(m)</th>
                     <th>시간</th>
-                    <th>거리<br />(Pixel)</th>
+                    <th>거리</th>
                     <th>방향</th>
                     <th>색상</th>
                     <th>삭제</th>
@@ -307,10 +306,7 @@
                 <tbody>
                   <tr>
                     <td>보행자</td>
-                    <td></td>
-                    <td></td>
-                    <td>5</td>
-                    <td></td>
+                    <td>50</td>
                     <td></td>
                     <td>
                       <a href="#" class="btn-small">방향설정</a>
@@ -322,9 +318,6 @@
                   </tr>
                   <tr>
                     <td>정지</td>
-                    <td></td>
-                    <td></td>
-                    <td>5</td>
                     <td>30</td>
                     <td></td>
                     <td>30</td>
@@ -335,9 +328,6 @@
                   </tr>
                   <tr>
                     <td>보행자</td>
-                    <td></td>
-                    <td></td>
-                    <td>5</td>
                     <td>30</td>
                     <td>30</td>
                     <td>30</td>
