fix: 수정PPT(231215_35) 작업 - 11페이지 일부분 제외하고 나머지 수정완료

--- a/base/html/cw/cw_stats_main.html
+++ b/base/html/cw/cw_stats_main.html
@@ -258,22 +258,23 @@
                 <article class="summary-info-chart">
                   <section>
                     <div class="chart-container">
-                      <!-- 차트 크기 1542(px) x 341(px) -->
+                      <!-- 231216 차트 높이 변경 -->
+                      <!-- 차트 크기 1542(px) x 380(px) -->
                       <img
-                        src="https://www.dummyimage.com/1542x341/f9f9f9/000.png&amp;text=Chart+Area"
+                        src="https://www.dummyimage.com/1542x380/f9f9f9/000.png&amp;text=Chart+Area"
                         alt="퍼블리싱 확인용 더미 이미지"
                         class="dummy-img"
                       />
                     </div>
                     <!-- //chart-container -->
                     <aside>
-                      <div class="selectbox-wrap xs">
+                      <!-- <div class="selectbox-wrap xs">
                         <select>
                           <option value="">도로명</option>
                           <option value="">도로명2</option>
                           <option value="">도로명3</option>
                         </select>
-                      </div>
+                      </div> -->
                       <!-- //selectbox-wrap -->
                       <div class="road-sort">
                         <button type="button" class="active">횡단자 수</button>
