--- a/base/html/cw/map_cw_view.html
+++ b/base/html/cw/map_cw_view.html
@@ -653,6 +653,9 @@
           </div>
           <!-- //los-legend-container -->
 
+          <!-- 231216 시스템 아이콘(횡단보도) 추가 / 클릭시 디자인은 active 클래스 추가해주세요. -->
+          <i class="ico-system-cw" style="left: 800px; top: 282px"><span class="screen-out">횡단보도</span></i>
+
           <!-- 카메라 아이콘:
               - data-target 속성의 값과 카메라 팝업의 id값이 일치해야 팝업이 노출됩니다.
               - style 속성의 left, top값으로 지도 위에 좌표값 설정.
