--- a/base/html/cw/position_set.html
+++ b/base/html/cw/position_set.html
@@ -116,7 +116,7 @@
             <div class="roi-set-list-header">
               <h3>좌표 매칭</h3>
               <span class="right">
-                <button type="button" class="btn-md bg-navy">영상 좌표 설정</button>
+                <!-- <button type="button" class="btn-md bg-navy">영상 좌표 설정</button> -->
                 <button type="button" class="btn-md bg-navy">저장</button>
               </span>
             </div>
@@ -219,6 +219,18 @@
               </table>
             </div>
             <!-- //data-tbl-gray -->
+
+            <!-- 231216 행 추가 버튼 추가 -->
+            <div class="add-row">
+              <button type="button"><em class="screen-out">행 추가</em></button>
+              <i class="add-row-tip">
+                <svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9" fill="none">
+                  <path d="M5.99974 -4.92117e-07L11.6289 9L0.370575 9L5.99974 -4.92117e-07Z" fill="#F8F8F8" />
+                </svg>
+                우측 영상에서 원하는 위치 클릭 후 위경도를 입력하세요.
+              </i>
+            </div>
+            <!-- //add-row -->
           </section>
           <!-- //roi-set-list-section -->
         </div>
