--- a/base/html/map_main.html
+++ b/base/html/map_main.html
@@ -149,6 +149,9 @@
           </div>
           <!-- //los-legend-container -->
 
+          <!-- 231216 시스템 아이콘(교차로) 추가 / 클릭시 디자인은 active 클래스 추가해주세요. -->
+          <i class="ico-system-cr" style="left: 800px; top: 282px"><span class="screen-out">교차로</span></i>
+
           <!-- <dl class="los-legend">
             <dt>접근로 별 LOS 표준 범례</dt>
             <dd>
@@ -177,9 +180,9 @@
                         data-target 속성의 값과 동일한 id값의 팝업을 호출합니다.
                         팝업의 id값 변경시 data-target 값과 동일하게 맞춰주세요.
           -->
-          <i class="ico-cw js-no-dimed-popup-call" data-target="crosswalk-popup" style="left: 300px; top: 282px"
+          <!-- <i class="ico-cw js-no-dimed-popup-call" data-target="crosswalk-popup" style="left: 300px; top: 282px"
             ><span class="screen-out">횡단보도</span></i
-          >
+          > -->
 
           <!-- 교차로 아이콘
               * style 속성의 left, top값으로 지도 위 좌표값 설정하시면 됩니다.
@@ -205,7 +208,7 @@
           <i class="ico-triangle-exclamation" style="left: 453px; top: 378px"><span class="screen-out">장애 발생</span></i>
 
           <!-- 횡단보도 클릭시 나오는 팝업 -->
-          <div id="crosswalk-popup" class="map-popup">작업예정</div>
+          <!-- <div id="crosswalk-popup" class="map-popup">작업예정</div> -->
 
           <!-- 230815 : 교차로 클릭시 나오는 팝업 -->
           <div id="crossing-popup" class="map-popup mw377">
