--- a/base/html/set_point_map.html
+++ b/base/html/set_point_map.html
@@ -130,9 +130,9 @@
           </div>
           <!-- //menu-popup -->
 
-          <i class="ico-cw js-no-dimed-popup-call" data-target="crosswalk-popup" style="left: 300px; top: 282px">
+          <!-- <i class="ico-cw js-no-dimed-popup-call" data-target="crosswalk-popup" style="left: 300px; top: 282px">
             <span class="screen-out">횡단보도</span>
-          </i>
+          </i> -->
 
           <!-- 교차로 아이콘1 -->
           <div class="los-display lv-a" style="left: 400px; top: 382px">
