--- a/base/html/is/real_time_outbreak.html
+++ b/base/html/is/real_time_outbreak.html
@@ -97,6 +97,57 @@
                 </ul>
                 <em class="outbreak-type other">Other</em>
               </button>
+              <button type="button" class="btn-item">
+                <ul class="data-list">
+                  <li>
+                    <em>일시</em>
+                    <span>2023-08-06 16:30:12</span>
+                  </li>
+                  <li>
+                    <em>구역</em>
+                    <span>서울시 금천구</span>
+                  </li>
+                  <li>
+                    <em>지점</em>
+                    <span>에이스하이엔드타워 앞</span>
+                  </li>
+                </ul>
+                <em class="outbreak-type tail">꼬리물기</em>
+              </button>
+              <button type="button" class="btn-item">
+                <ul class="data-list">
+                  <li>
+                    <em>일시</em>
+                    <span>2023-08-06 16:30:12</span>
+                  </li>
+                  <li>
+                    <em>구역</em>
+                    <span>서울시 금천구</span>
+                  </li>
+                  <li>
+                    <em>지점</em>
+                    <span>에이스하이엔드타워 앞</span>
+                  </li>
+                </ul>
+                <em class="outbreak-type stop-line-violation">정지선<br />위반</em>
+              </button>
+              <button type="button" class="btn-item">
+                <ul class="data-list">
+                  <li>
+                    <em>일시</em>
+                    <span>2023-08-06 16:30:12</span>
+                  </li>
+                  <li>
+                    <em>구역</em>
+                    <span>서울시 금천구</span>
+                  </li>
+                  <li>
+                    <em>지점</em>
+                    <span>에이스하이엔드타워 앞</span>
+                  </li>
+                </ul>
+                <em class="outbreak-type lane-designation-violation">지정차로<br />위반</em>
+              </button>
             </div>
             <!-- //real-time-outbreak-item -->
             <!-- <div class="paging-group">
