--- a/base/html/cw/position_set.html
+++ b/base/html/cw/position_set.html
@@ -222,7 +222,8 @@
 
             <!-- 231216 행 추가 버튼 추가 -->
             <div class="add-row">
-              <button type="button"><em class="screen-out">행 추가</em></button>
+              <!-- 231224 active 클래스 추가시 버튼 활성화 및 말풍선 노출됨 -->
+              <button type="button" class="active"><em class="screen-out">행 추가</em></button>
               <i class="add-row-tip">
                 <svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9" fill="none">
                   <path d="M5.99974 -4.92117e-07L11.6289 9L0.370575 9L5.99974 -4.92117e-07Z" fill="#F8F8F8" />
