fix: QNA_20240104_01.pptx 1~5페이지 수정

--- a/base/html/is/crossroads_roi_set_tab.html
+++ b/base/html/is/crossroads_roi_set_tab.html
@@ -120,7 +120,7 @@
             <div class="roi-set-list-header">
               <h3>ROI 설정 목록</h3>
               <span class="right">
-                <button type="button" class="btn-md bg-navy">동기화</a>
+                <button type="button" class="btn-md bg-navy">불러오기</a>
                 <button type="button" class="btn-md bg-navy">저장</a>
               </span>
             </div>
