design: QNA_20240104_디자인 수정내용 정리.pptx 1~8페이지 수정

--- a/base/html/is/crossroads_flow.html
+++ b/base/html/is/crossroads_flow.html
@@ -225,13 +225,15 @@
                     <ul class="flow-traffic-data">
                       <li>
                         <em>도로 명</em>
+                        <em>방향</em>
                         <em>좌회전</em>
                         <em>직진</em>
                         <em>우회전</em>
                         <em>계</em>
                       </li>
                       <li>
-                        <span>가산가산디지털단지 1로</span>
+                        <span>가산가산디지털단지 1로 방면 사거리</span>
+                        <span>동</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -240,6 +242,7 @@
                       <!-- 230913수정 active 클래스 추가시 column 활성화  -->
                       <li class="active">
                         <span>도로명 2</span>
+                        <span>서</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -247,6 +250,7 @@
                       </li>
                       <li>
                         <span>도로명 3</span>
+                        <span>남</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -254,6 +258,7 @@
                       </li>
                       <li>
                         <span>도로명 4</span>
+                        <span>북</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -267,13 +272,15 @@
                     <ul class="flow-traffic-data">
                       <li>
                         <em>도로 명</em>
+                        <em>방향</em>
                         <em>좌회전</em>
                         <em>직진</em>
                         <em>우회전</em>
                         <em>계</em>
                       </li>
                       <li>
-                        <span>도로명 1</span>
+                        <span>시민문화여성회관사거리 방면 사거리</span>
+                        <span>동</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -281,6 +288,7 @@
                       </li>
                       <li>
                         <span>도로명 2</span>
+                        <span>서</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -288,6 +296,7 @@
                       </li>
                       <li>
                         <span>도로명 3</span>
+                        <span>남</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
@@ -295,6 +304,7 @@
                       </li>
                       <li>
                         <span>도로명 4</span>
+                        <span>북</span>
                         <span>7,528</span>
                         <span>22,025</span>
                         <span>72,621</span>
