--- a/base/html/is/crossroads_roi_set_tab.html
+++ b/base/html/is/crossroads_roi_set_tab.html
@@ -181,11 +181,15 @@
             </div>
             <!-- //perceive-header -->
 
-            <div class="roi-set-area-button-group">
+            <!-- 240108 버튼이 6개일경우 sm클래스 추가, 3개일경우 sm클래스 삭제 -->
+            <div class="roi-set-area-button-group sm">
               <!-- button에 active 클래스 추가시 활성화 -->
               <button type="button" class="active">보행자 영역</button>
               <button type="button">정지 영역</button>
               <button type="button">역주행 영역</button>
+              <button type="button">정지선 위반 영역</button>
+              <button type="button">꼬리물기 영역</button>
+              <button type="button">지정차로 위반 영역</button>
             </div>
             <!-- //roi-set-area-button-group -->
 
