design: QNA_20240109_디자인 수정내용 정리.pptx - p8 ~ p24까지 수정

--- a/base/html/is/camera_add.html
+++ b/base/html/is/camera_add.html
@@ -173,6 +173,20 @@
                       </div>
                     </td>
                   </tr>
+                  <tr>
+                    <th>제조사</th>
+                    <td>
+                      <div class="ui input rounded">
+                        <input type="text" />
+                      </div>
+                    </td>
+                    <th class="pdl-15">모델명</th>
+                    <td>
+                      <div class="ui input rounded">
+                        <input type="text" />
+                      </div>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
