--- a/base/html/is/crossroads_stats_main.html
+++ b/base/html/is/crossroads_stats_main.html
@@ -61,6 +61,15 @@
                     </select>
                   </div>
                   <!-- //selectbox-wrap -->
+                  <div class="selectbox-wrap primary label-none">
+                    <select>
+                      <option value="">시간별</option>
+                      <option value="">아이템1</option>
+                      <option value="">아이템2</option>
+                      <option value="">아이템3</option>
+                    </select>
+                  </div>
+                  <!-- //selectbox-wrap -->
 
                   <!-- 달력 날짜 초기화는 맨 아래 스크립트 참고   -->
                   <div class="date-group">
