--- a/base/html/rtu_add.html
+++ b/base/html/rtu_add.html
@@ -42,7 +42,7 @@
                       </select>
                     </div>
                   </td>
-                  <th class="pdl-15">지점</th>
+                  <th class="pdl-15">지점 유형</th>
                   <td>
                     <div class="selectbox-wrap rounded">
                       <select>
@@ -56,9 +56,20 @@
                 </tr>
                 <tr>
                   <th>지점 ID</th>
-                  <td colspan="3">
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" disabled />
+                    </div>
+                  </td>
+                  <th class="pdl-15">지점</th>
+                  <td>
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                      </select>
                     </div>
                   </td>
                 </tr>
