--- a/base/html/rtu_view.html
+++ b/base/html/rtu_view.html
@@ -33,12 +33,14 @@
                 <tr>
                   <th>구역</th>
                   <td>태릉</td>
-                  <th>지점</th>
-                  <td>원자력병원 앞</td>
+                  <th>지점 유형</th>
+                  <td>교차로</td>
                 </tr>
                 <tr>
                   <th>지점 ID</th>
-                  <td colspan="3">1001</td>
+                  <td>태릉</td>
+                  <th>지점</th>
+                  <td>원자력병원 앞</td>
                 </tr>
                 <tr>
                   <th>지점 주소</th>
