--- a/base/html/is/camera_edit.html
+++ b/base/html/is/camera_edit.html
@@ -163,6 +163,20 @@
                       </div>
                     </td>
                   </tr>
+                  <tr>
+                    <th>제조사</th>
+                    <td>
+                      <div class="ui input rounded">
+                        <input type="text" />
+                      </div>
+                    </td>
+                    <th class="pdl-15">모델명</th>
+                    <td>
+                      <div class="ui input rounded">
+                        <input type="text" />
+                      </div>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
             </div>
