--- a/base/html/is/camera_view.html
+++ b/base/html/is/camera_view.html
@@ -78,6 +78,12 @@
                   <th>경도</th>
                   <td>128.123456</td>
                 </tr>
+                <tr>
+                  <th>제조사</th>
+                  <td>한화비전</td>
+                  <th>모델명</th>
+                  <td>XNO-8600XR</td>
+                </tr>
               </tbody>
             </table>
           </div>
