--- a/base/html/is/crossroads_flow.html
+++ b/base/html/is/crossroads_flow.html
@@ -92,7 +92,11 @@
               <section class="crossroads-flow-view">
                 <div class="crossroads-flow-board">
                   <em class="tit">태릉입구역</em>
-                  <div class="flow-stats-wrap">
+                  <!-- 240109: 차로 클래스명 추가
+                              2차로 클래스명: lane-2
+                              3차로 클래스명: lane-3
+                  -->
+                  <div class="flow-stats-wrap lane-3">
                     <!-- 230913수정 : 
                       <화살표 아이콘 색상 변경시 class명 참고>
                         - 직선(위/아래) 화살표(블루) : active-blue
