--- a/base/html/is/signal_info_view1.html
+++ b/base/html/is/signal_info_view1.html
@@ -63,11 +63,11 @@
             <em class="modal-body-sub-tit type2">도로 별 신호 연동</em>
             <div class="data-tbl-very md type2">
               <table class="ui very basic table md">
-                <!-- 231023 colgroup 추가 -->
+                <!-- 240109 col 너비 수정 -->
                 <colgroup>
-                  <col style="width: 80px" />
+                  <col style="width: 120px" />
                   <col style="width: 50px" />
-                  <col style="width: 110px" />
+                  <col style="width: 130px" />
                   <col />
                   <col />
                   <col />
@@ -80,17 +80,17 @@
                     <th rowspan="2">도로 명</th>
                     <th rowspan="2">방향</th>
                     <th rowspan="2">방향 명</th>
-                    <th colspan="2">차량 현시(직진)</th>
-                    <th colspan="2">차량 현시(좌회전)</th>
+                    <th colspan="2">직진</th>
+                    <th colspan="2">좌회전</th>
                     <th colspan="2">보행 현시</th>
                   </tr>
                   <tr>
-                    <th>링 구분</th>
-                    <th>현시번호</th>
-                    <th>링 구분</th>
-                    <th>현시번호</th>
-                    <th>링 구분</th>
-                    <th>현시번호</th>
+                    <th>A링</th>
+                    <th>B링</th>
+                    <th>A링</th>
+                    <th>B링</th>
+                    <th>A링</th>
+                    <th>B링</th>
                   </tr>
                 </thead>
                 <tbody>
