--- a/base/html/rtu_edit.html
+++ b/base/html/rtu_edit.html
@@ -33,22 +33,43 @@
                 <tr>
                   <th>구역</th>
                   <td>
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                      </select>
+                    </div>
+                  </td>
+                  <th class="pdl-15">지점 유형</th>
+                  <td>
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                      </select>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <th>지점 ID</th>
+                  <td>
                     <div class="ui input rounded">
                       <input type="text" disabled />
                     </div>
                   </td>
                   <th class="pdl-15">지점</th>
                   <td>
-                    <div class="ui input rounded">
-                      <input type="text" disabled />
-                    </div>
-                  </td>
-                </tr>
-                <tr>
-                  <th>지점 ID</th>
-                  <td colspan="3">
-                    <div class="ui input rounded">
-                      <input type="text" disabled />
+                    <div class="selectbox-wrap rounded">
+                      <select>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                        <option value="">내용</option>
+                      </select>
                     </div>
                   </td>
                 </tr>
