fix: QNA_20240112_디자인 수정내용 정리.pptx - p1~7 수정

--- a/base/html/dashboard_cr_a.html
+++ b/base/html/dashboard_cr_a.html
@@ -129,36 +129,25 @@
                     </div>
                     <!-- //chart-bind -->
                     <ul class="dashboard-noti-list">
+                      <!-- 240112 li 수정 -->
                       <li>
-                        <i class="ico-sudden1"></i>
-                        <div class="noti-info">
-                          <p><em>[꼬리물기]</em>태릉입구역 무단횡단 발생</p>
-                          <time>2023-10-24 15:30</time>
-                        </div>
+                        <em class="sign-sudden1">꼬리물기</em>
+                        <span class="txt">홈플러스익스프레스천안성정점앞앞앞</span>
                         <span class="pass">2시간 전</span>
                       </li>
                       <li>
-                        <i class="ico-sudden2"></i>
-                        <div class="noti-info">
-                          <p><em>[꼬리물기]</em>태릉입구역 역주행 발생</p>
-                          <time>2023-10-24 15:30</time>
-                        </div>
+                        <em class="sign-sudden2">정지선위반</em>
+                        <span class="txt">천안브라운스톤아파트114동앞</span>
                         <span class="pass">2시간 전</span>
                       </li>
                       <li>
-                        <i class="ico-sudden3"></i>
-                        <div class="noti-info">
-                          <p><em>[정지선 위반]</em>태릉입구역 역주행 발생</p>
-                          <time>2023-10-24 15:30</time>
-                        </div>
+                        <em class="sign-sudden3">지정차로위반</em>
+                        <span class="txt">천안브라운스톤아파트114동앞</span>
                         <span class="pass">2시간 전</span>
                       </li>
                       <li>
-                        <i class="ico-sudden4"></i>
-                        <div class="noti-info">
-                          <p><em>[지정차로 위반]</em>태릉입구역 차량정지 발생 발생</p>
-                          <time>2023-10-24 15:30</time>
-                        </div>
+                        <em class="sign-sudden4">역주행</em>
+                        <span class="txt">천안브라운스톤아파트114동앞</span>
                         <span class="pass">2시간 전</span>
                       </li>
                     </ul>
@@ -174,44 +163,30 @@
                   </div>
                   <!-- //dashboard-reform-tit-wrap -->
                   <ul class="dashboard-noti-list">
+                    <!-- 240112 li 수정 -->
                     <li>
                       <i class="ico-hindrance1"></i>
-                      <div class="noti-info">
-                        <p><em>[카메라이상]</em>태릉입구역 교차로 카메라 이상</p>
-                        <time>2023-10-24 15:30</time>
-                      </div>
+                      <p class="txt"><em>[카메라이상]</em>태릉입구역 교차로 카메라 이상 상태</p>
                       <span class="pass">2시간 전</span>
                     </li>
                     <li>
                       <i class="ico-hindrance2"></i>
-                      <div class="noti-info">
-                        <p><em>[분석서버 이상]</em>태릉입구역 교차로 카메라</p>
-                        <time>2023-10-24 15:30</time>
-                      </div>
+                      <p class="txt"><em>[분석서버 이상]</em>태릉입구역 교차로 카메라</p>
                       <span class="pass">2시간 전</span>
                     </li>
                     <li>
                       <i class="ico-hindrance3"></i>
-                      <div class="noti-info">
-                        <p><em>[카메라이상]</em>태릉입구역 교차로 카메라 이상</p>
-                        <time>2023-10-24 15:30</time>
-                      </div>
+                      <p class="txt"><em>[카메라이상]</em>태릉입구역 교차로 카메라 이상</p>
                       <span class="pass">2시간 전</span>
                     </li>
                     <li>
                       <i class="ico-hindrance1"></i>
-                      <div class="noti-info">
-                        <p><em>[상태감시장치 이상]</em>태릉입구역 교차로 상태...</p>
-                        <time>2023-10-24 15:30</time>
-                      </div>
+                      <p class="txt"><em>[상태감시장치 이상]</em>태릉입구역 교차로 상태</p>
                       <span class="pass">2시간 전</span>
                     </li>
                     <li>
                       <i class="ico-hindrance2"></i>
-                      <div class="noti-info">
-                        <p><em>[분석서버 이상]</em>태릉입구역 교차로 카메라</p>
-                        <time>2023-10-24 15:30</time>
-                      </div>
+                      <p class="txt"><em>[분석서버 이상]</em>태릉입구역 교차로 카메라</p>
                       <span class="pass">2시간 전</span>
                     </li>
                   </ul>
