--- a/base/html/common/sudden_disorder_popup.html
+++ b/base/html/common/sudden_disorder_popup.html
@@ -8,42 +8,67 @@
 <div class="sudden-disorder-tab-wrap">
   <div class="ui bottom attached tab segment tab-sudden active" data-tab="first">
     <ul class="tab-sudden-list">
+      <!-- 240112 li 수정 -->
+      <!-- 검지확인시 회색 처리: li에 read클래스 추가 -->
       <li>
-        <p class="txt">
-          <span>12:30:08</span>
-          <em>태릉 - 공릉역사거리</em>
-          <i class="txt-badge c-peach">역주행</i>
-        </p>
+        <div class="txt-wrap">
+          <em class="noti-sudden1">꼬리물기</em>
+          <span class="txt">
+            <em>홈플러스익스프레스천안성정점앞</em>
+            <time>2023-10-24 15:30</time>
+          </span>
+        </div>
+        <!-- //txt-wrap -->
         <span class="btn-bind">
           <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
           <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
         </span>
       </li>
       <li class="read">
-        <p class="txt">
-          <span>12:30:08</span>
-          <em>태릉 - 공릉역사거리</em>
-          <i class="txt-badge c-bisque">정지</i>
-        </p>
+        <div class="txt-wrap">
+          <em class="noti-sudden2">정지선위반</em>
+          <span class="txt">
+            <em>홈플러스익스프레스천안성정점앞</em>
+            <time>2023-10-24 15:30</time>
+          </span>
+        </div>
+        <!-- //txt-wrap -->
         <span class="btn-bind">
           <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
           <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
         </span>
       </li>
       <li>
-        <p class="txt">
-          <span>12:30:08</span>
-          <em>태릉 - 공릉역사거리</em>
-          <i class="txt-badge c-purple">보행자</i>
-        </p>
+        <div class="txt-wrap">
+          <em class="noti-sudden3">지정차로위반</em>
+          <span class="txt">
+            <em>홈플러스익스프레스천안성정점앞</em>
+            <time>2023-10-24 15:30</time>
+          </span>
+        </div>
+        <!-- //txt-wrap -->
         <span class="btn-bind">
           <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
           <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
         </span>
       </li>
-      <li class="more">
-        <button type="button">...</button>
+      <li>
+        <div class="txt-wrap">
+          <em class="noti-sudden4">정지</em>
+          <span class="txt">
+            <em>홈플러스익스프레스천안성정점앞</em>
+            <time>2023-10-24 15:30</time>
+          </span>
+        </div>
+        <!-- //txt-wrap -->
+        <span class="btn-bind">
+          <button type="button" class="ico-picture"><span class="screen-out">돌발 스틸컷 사진 보기</span></button>
+          <button type="button" class="ico-view"><span class="screen-out">실시간 돌발 조회 화면으로 이동하기</span></button>
+        </span>
       </li>
+      <!-- <li class="more">
+        <button type="button">...</button>
+      </li> -->
     </ul>
     <!-- //tab-sudden-list -->
     <div class="sudden-disorder-check">
@@ -67,28 +92,32 @@
   <!-- 장애 탭 컨텐츠 -->
   <div class="ui bottom attached tab segment tab-disorder" data-tab="second">
     <ul class="tab-sudden-list">
+      <!-- 240112 li 수정 -->
       <li>
-        <p class="txt">
-          <span>12:30:08</span>
-          <em>태릉 - 공릉역사거리</em>
-          <i class="txt-badge c-peach">보행자주의안내 VMS 1</i>
-        </p>
-        <span class="btn-bind">
-          <button type="button" class="ui secondary basic button c-gray-type3 rounded">확인</button>
-        </span>
-      </li>
-      <!-- 확인 버튼 클릭시 read클래스 추가 -->
-      <li class="read">
-        <p class="txt">
-          <span>12:30:08</span>
-          <em>태릉 - 공릉역사거리</em>
-          <i class="txt-badge c-peach">장비명 및 내용</i>
-        </p>
-        <span class="btn-bind">
-          <button type="button" class="ui secondary basic button c-gray-type3 rounded">확인</button>
+        <em class="noti-block">카메라 이상</em>
+        <span class="txt">
+          <em>버들마을우미린아파트307동앞</em>
+          <time>2023-10-24 15:30</time>
         </span>
       </li>
       <li>
+        <em class="noti-block">상태감시장치 이상</em>
+        <span class="txt">
+          <em>버들마을우미린아파트307동앞</em>
+          <time>2023-10-24 15:30</time>
+        </span>
+      </li>
+      <li>
+        <em class="noti-block">분석서버 이상</em>
+        <span class="txt">
+          <em>버들마을우미린아파트307동앞</em>
+          <time>2023-10-24 15:30</time>
+        </span>
+      </li>
+      <li class="more">
+        <button type="button">...</button>
+      </li>
+      <!-- <li>
         <p class="txt">
           <span>12:30:08</span>
           <em>태릉 - 공릉역사거리</em>
@@ -97,10 +126,7 @@
         <span class="btn-bind">
           <button type="button" class="ui secondary basic button c-gray-type3 rounded">확인</button>
         </span>
-      </li>
-      <li class="more">
-        <button type="button">...</button>
-      </li>
+      </li> -->
     </ul>
     <!-- //tab-sudden-list -->
     <div class="sudden-disorder-check">
